Change to make JDK8 compliant